--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
+    <title>Katie's Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
@@ -12,9 +12,28 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <h2>Topics to Study</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
     </main>
+<section class="card" id="html-section">text Markup Language) is the standard markup language for creating web pages.</p>
 
+</section>
+
+<section class="card" id="CSS-section">
+
+</section>
+
+<section class="card" id="Git-Section">
+ 
+</section>
+
+<section class="card" id="JavaScript-section">
+
+</section>
     <footer>
       <p>I can code!</p>
     </footer>
