--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Katie's Prework Study Guide</title>
+    <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
@@ -12,28 +12,37 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <h2>Topics to Study</h2>
+         <section class="card" id="html-section">
+     <h2>HTML</h2>
+    <ul>
+     <li>The head element contains information about the webpage.</li>
+     <li>The body element represents the visible content shown to the user.</li>
+   </ul>
+   </section>
+
+     <section class="card" id="css-section">
+     <h2>CSS</h2>
+     <ul>
+       <li>Enter your CSS notes here</li>
+     </ul>
+   </section>
+
+   <section class="card" id="git-section">
+     <h2>Git</h2>
       <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-      </ul>
+    <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+  </ul>
+   </section>
+
+   <section class="card" id="javascript-section">
+     <h2>JavaScript</h2>
+     <ul>
+       <li>Enter your JavaScript notes here</li>
+     </ul>
+   </section>
     </main>
-<section class="card" id="html-section">text Markup Language) is the standard markup language for creating web pages.</p>
 
-</section>
-
-<section class="card" id="CSS-section">
-
-</section>
-
-<section class="card" id="Git-Section">
- 
-</section>
-
-<section class="card" id="JavaScript-section">
-
-</section>
     <footer>
       <p>I can code!</p>
     </footer>
